ctx.drawImage should clip source rect if it is outside the source image https://bugs.webkit.org/show_bug.cgi?id=160804

Reviewed by Simon Fraser.

Source/WebCore:

According to the specification [1]"
"When the source rectangle is outside the source image, the source rectangle
must be clipped to the source image and the destination rectangle must be
clipped in the same proportion."

Firefox and Chrome behave according to the specification. This patch aligns
our behavior.

[1] https://html.spec.whatwg.org/multipage/scripting.html#dom-context-2d-drawimage

Test: fast/canvas/drawImage-srcRect-clipping.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::drawImage):

LayoutTests:

Add layout test coverage.

* fast/canvas/drawImage-srcRect-clipping-expected.html: Added.
* fast/canvas/drawImage-srcRect-clipping.html: Added.

Canonical link: https://commits.webkit.org/179013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204517 268f45cc-cd09-0410-ab3c-d52691b4dbfc