Source/WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -1390,8 +1390,20 @@ void CanvasRenderingContext2D::drawImage(HTMLImageElement& imageElement, const F
         ec = INDEX_SIZE_ERR;
         return;
     }
-    if (!imageRect.contains(normalizedSrcRect))
+
+    // When the source rectangle is outside the source image, the source rectangle must be clipped
+    // to the source image and the destination rectangle must be clipped in the same proportion.
+    FloatRect originalNormalizedSrcRect = normalizedSrcRect;
+    normalizedSrcRect.intersect(imageRect);
+    if (normalizedSrcRect.isEmpty())
         return;
+
+    if (normalizedSrcRect != originalNormalizedSrcRect) {
+        normalizedDstRect.setWidth(normalizedDstRect.width() * normalizedSrcRect.width() / originalNormalizedSrcRect.width());
+        normalizedDstRect.setHeight(normalizedDstRect.height() * normalizedSrcRect.height() / originalNormalizedSrcRect.height());
+        if (normalizedDstRect.isEmpty())
+            return;
+    }
 
     GraphicsContext* c = drawingContext();
     if (!c)
